fixed services misaligned page link

--- a/css/style.css
+++ b/css/style.css
@@ -466,6 +466,21 @@ ul {
 a {
   text-decoration: none;
 }
+/* .services {
+  padding-bottom: 200px;
+} */
+
+.services::before {
+  content: "";
+  display: block;
+  height: -1px; /*fixed header height */
+  margin: 1px 0 0; /* negative fixed header height */
+}
+
+.services .max-width {
+  padding-top: 1px;
+}
+
 .services-content {
   width: 100%;
   /* height: 99vh; */
@@ -480,8 +495,8 @@ a {
 }
 
 .services .title {
-  margin-top: 150px;
-  margin-bottom: -50px;
+  margin-top: 130px;
+  margin-bottom: -80px;
 }
 
 .box {
@@ -561,6 +576,17 @@ a {
   background: #fff;
   height: 99vh;
   align-content: center;
+  /* padding-top: 100px; */
+}
+.contact::before {
+  content: "";
+  display: block;
+  height: 1px; /*fixed header height */
+  margin: -1px 0 0; /* negative fixed header height */
+}
+.contact .max-width {
+  /* background: #fff; */
+  /* padding-top: 80px; */
 }
 
 .contact .container {
